--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "re-gamer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "electron": "^3.0.13",
     "node-sass": "^4.11.0",
@@ -10,6 +11,7 @@
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "smoothscroll-polyfill": "^0.4.3",
     "styled-components": "^4.1.3"
   },
   "scripts": {
