--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "normalize.css": "^8.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
-    "smoothscroll-polyfill": "^0.4.3",
+    "redux": "^4.0.1",
     "styled-components": "^4.1.3"
   },
   "scripts": {
