--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "electron": "^3.0.13",
     "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
