--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@fortawesome/free-brands-svg-icons": "^5.6.1",
     "@fortawesome/free-solid-svg-icons": "^5.6.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
-    "electron": "^3.0.13",
     "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
     "react": "^16.7.0-alpha.2",
@@ -26,6 +25,7 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
+  "main": "main.js",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -35,5 +35,12 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {}
+  "devDependencies": {
+    "electron": "^4.0.0",
+    "electron-builder": "^20.38.4"
+  },
+  "build": {
+    "appId": "react.gamer.forums",
+    "productName": "ReGamer"
+  }
 }
