--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.10",
-    "@fortawesome/free-brands-svg-icons": "^5.6.1",
-    "@fortawesome/free-solid-svg-icons": "^5.6.1",
-    "@fortawesome/react-fontawesome": "^0.1.3",
-    "node-sass": "^4.11.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-brands-svg-icons": "^5.9.0",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
-    "react": "^16.7.0-alpha.2",
-    "react-dom": "^16.7.0-alpha.2",
-    "react-redux": "^6.0.0",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
-    "redux": "^4.0.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.4",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,8 +36,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "electron": "^4.0.0",
-    "electron-builder": "^20.38.4"
+    "electron": "^5.0.7",
+    "electron-builder": "^21.1.1"
   },
   "build": {
     "appId": "react.gamer.forums",
